# py-starting-template

./: .env.example  .gitignore  AGENTS.md  BLUEPRINT.md  Makefile  README.md  SECURITY.md  lefthook.yml  pyproject.toml  sgconfig.yml
.claude/: settings.json
.claude/agents/: code-reviewer.md  explore.md
.claude/commands/: handoff.md  plan.md  report.md
.claude/hooks/: bash-gate.sh  post-edit-ruff.sh  session-context.sh  stop-verify.sh
.claude/rules/: ci.md  security.md  tests.md
.claude/skills/audit/: SKILL.md
.claude/skills/handoff/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/report/: SKILL.md
.claude/skills/verify-loop/: SKILL.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  renovate.json5
.github/workflows/: ci.yml  codeql.yml  scorecard.yml  zizmor.yml
docs/: HANDOFF.md  decisions.md
docs/guides/: adding-a-slop-rule.md  dependency-cooldown.md
docs/reports/: 2026-07-04-knowledge-infra-research.md  2026-07-04-python-tooling-research.md
slop-rules/: no-except-return-fallback.yml  no-narrator-comments.yml  no-raise-exception-wrap.yml
src/app/: api.py  core.py
tests/: test_api.py  test_core.py
